--- a/scss/_event.scss
+++ b/scss/_event.scss
@@ -115,7 +115,7 @@
                         button {
                             width: 117px;
                             height: 37px;
-                            @include buttonStyle_1;
+                            @include mainBtn;
                         }
                         .disable {
                             width: 117px;
