--- a/css/style.css
+++ b/css/style.css
@@ -803,22 +803,6 @@ html body header .top {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-html body header .top .brad {
-  font-size: 22px;
-  font-weight: bold;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #ffffff;
-}
-html body header .top .brad .time {
-  font-size: 16px;
-  margin-left: 10px;
-  color: #ffffff;
-}
 html body header .top .user {
   width: auto;
   height: 100%;
@@ -947,7 +931,7 @@ html body header .top .user li:not(.platform).register .register_ic {
 }
 html body header .top .user li:not(.platform).moneyTotal {
   position: relative;
-  color: #3d4cce;
+  color: #0df;
   cursor: pointer;
 }
 html body header .top .user li:not(.platform).moneyTotal::before {
@@ -972,8 +956,8 @@ html body header .top .user li:not(.platform).moneyTotal .transferInfo {
   width: 290px;
   height: auto;
   font-weight: bold;
-  background: #666666;
-  border: solid 1px #4c4c4c;
+  background: #666;
+  border: solid 1px #737373;
   position: absolute;
   top: 40px;
   left: 0px;
@@ -986,7 +970,7 @@ html body header .top .user li:not(.platform).moneyTotal .transferInfo li {
   width: 100%;
   height: 47px;
   padding: 11px 16px;
-  border-bottom: solid 1px #c6c8d0;
+  border-bottom: solid 1px #737373;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: #ffffff;
@@ -1076,7 +1060,7 @@ html body header .top .user li:not(.platform).lang select option {
 html body header .gameNav {
   width: 100%;
   height: 80px;
-  background: #f8f8fa;
+  background: #ffffff;
 }
 html body header .gameNav .center {
   width: 1400px;
@@ -1113,7 +1097,6 @@ html body header .gameNav .center ul li {
   border-bottom: solid 4px transparent;
 }
 html body header .gameNav .center ul li:hover, html body header .gameNav .center ul li:active, html body header .gameNav .center ul li.active {
-  color: #4a59ed;
   border-color: #4a59ed;
 }
 html body header .gameNav .center ul li:hover::before, html body header .gameNav .center ul li:active::before, html body header .gameNav .center ul li.active::before {
@@ -1348,7 +1331,6 @@ html body .sideBar .download {
   background: -webkit-gradient(linear, left top, left bottom, from(#3179ff), to(#784dff));
   background: linear-gradient(#3179ff, #784dff);
   color: #ffffff;
-  font-weight: bold;
 }
 html body .sideBar .download i {
   width: 30px;
@@ -1366,7 +1348,6 @@ html body .sideBar .rightSide {
   background: -webkit-gradient(linear, left top, left bottom, from(#3179ff), to(#784dff));
   background: linear-gradient(#3179ff, #784dff);
   color: #ffffff;
-  font-weight: bold;
 }
 html body .sideBar .rightSide li {
   width: 100%;
@@ -1481,65 +1462,7 @@ html body .mainWrap .center .downBar li i {
 html body footer {
   width: 100%;
   height: auto;
-  background: #3d4cce;
-}
-html body footer .top {
-  width: 100%;
-  height: 80px;
-}
-html body footer .top .center {
-  width: 1400px;
-  height: 100%;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-html body footer .top .center button {
-  width: 25px;
-  height: 100%;
-  position: relative;
-  background: none;
-}
-html body footer .top .center button::before {
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 18px;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-html body footer .top .center button.next::before {
-  -webkit-transform: translate(-50%, -50%) scaleX(-1);
-          transform: translate(-50%, -50%) scaleX(-1);
-}
-html body footer .top .center .partnerBox {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-html body footer .top .center .partnerBox .partners {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: auto;
-  height: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transition: 0.6s ease;
-  transition: 0.6s ease;
-}
-html body footer .top .center .partnerBox .partners i {
-  width: 170px;
-  height: 55px;
-  margin: 0 10px;
-  opacity: 0.6;
+  background: #333333;
 }
 html body footer .footerList {
   width: 100%;
@@ -1586,21 +1509,6 @@ html body footer .footerList .center ul li p {
   font-size: 13px;
   opacity: 0.7;
   margin-bottom: 10px;
-}
-html body footer .footerList .center ul li button {
-  width: 202px;
-  height: 37px;
-  margin-bottom: 10px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#3179ff), to(#784dff));
-  background: linear-gradient(#3179ff, #784dff);
-  color: #ffffff;
-  font-weight: bold;
-}
-html body footer .footerList .center ul li button i {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  vertical-align: top;
 }
 html body footer .footerList .footer-site .center-wrap {
   text-align: center;
@@ -1813,17 +1721,17 @@ html body .filter .jumpWindow.plsGo .btnBox button {
   width: 322px;
   height: 42px;
   background: -webkit-gradient(linear, left top, left bottom, from(#f1d7b7), color-stop(50%, #cca172), to(#f1c999));
-  background: linear-gradient(to bottom, #f1d7b7 0%, #cca172 50%, #f1c999 100%);
-  border: solid 1px #cca172;
+  background: linear-gradient(#f1d7b7, #cca172 50%, #f1c999);
+  border: 1px solid #d2a269;
   border-radius: 3px;
   color: #ffffff;
   font-size: 14px;
   font-weight: bold;
-  letter-spacing: 1px;
+  padding: 0 16px;
 }
-html body .filter .jumpWindow.plsGo .btnBox button:hover, html body .filter .jumpWindow.plsGo .btnBox button:active, html body .filter .jumpWindow.plsGo .btnBox button.active {
-  background: -webkit-gradient(linear, left bottom, left top, from(#f1d7b7), color-stop(50%, #cca172), to(#f1c999));
-  background: linear-gradient(to top, #f1d7b7 0%, #cca172 50%, #f1c999 100%);
+html body .filter .jumpWindow.plsGo .btnBox button:active, html body .filter .jumpWindow.plsGo .btnBox button.active {
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #f1d7b7), color-stop(50%, #cca172), to(#f1c999));
+  background: linear-gradient(0deg, #f1d7b7 0, #cca172 50%, #f1c999);
 }
 html body .filter .jumpWindow.score {
   display: none;
@@ -1981,17 +1889,17 @@ html body .filter .jumpWindow.passwordWindow form .btnBox button {
   width: 322px;
   height: 42px;
   background: -webkit-gradient(linear, left top, left bottom, from(#f1d7b7), color-stop(50%, #cca172), to(#f1c999));
-  background: linear-gradient(to bottom, #f1d7b7 0%, #cca172 50%, #f1c999 100%);
-  border: solid 1px #cca172;
+  background: linear-gradient(#f1d7b7, #cca172 50%, #f1c999);
+  border: 1px solid #d2a269;
   border-radius: 3px;
   color: #ffffff;
   font-size: 14px;
   font-weight: bold;
-  letter-spacing: 1px;
+  padding: 0 16px;
 }
-html body .filter .jumpWindow.passwordWindow form .btnBox button:hover, html body .filter .jumpWindow.passwordWindow form .btnBox button:active, html body .filter .jumpWindow.passwordWindow form .btnBox button.active {
-  background: -webkit-gradient(linear, left bottom, left top, from(#f1d7b7), color-stop(50%, #cca172), to(#f1c999));
-  background: linear-gradient(to top, #f1d7b7 0%, #cca172 50%, #f1c999 100%);
+html body .filter .jumpWindow.passwordWindow form .btnBox button:active, html body .filter .jumpWindow.passwordWindow form .btnBox button.active {
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #f1d7b7), color-stop(50%, #cca172), to(#f1c999));
+  background: linear-gradient(0deg, #f1d7b7 0, #cca172 50%, #f1c999);
 }
 html body .filter .jumpWindow.walletRecord {
   width: 976px;
@@ -2082,17 +1990,17 @@ html body .filter .jumpWindow.checkEvent .btnBox button {
   width: 322px;
   height: 42px;
   background: -webkit-gradient(linear, left top, left bottom, from(#f1d7b7), color-stop(50%, #cca172), to(#f1c999));
-  background: linear-gradient(to bottom, #f1d7b7 0%, #cca172 50%, #f1c999 100%);
-  border: solid 1px #cca172;
+  background: linear-gradient(#f1d7b7, #cca172 50%, #f1c999);
+  border: 1px solid #d2a269;
   border-radius: 3px;
   color: #ffffff;
   font-size: 14px;
   font-weight: bold;
-  letter-spacing: 1px;
+  padding: 0 16px;
 }
-html body .filter .jumpWindow.checkEvent .btnBox button:hover, html body .filter .jumpWindow.checkEvent .btnBox button:active, html body .filter .jumpWindow.checkEvent .btnBox button.active {
-  background: -webkit-gradient(linear, left bottom, left top, from(#f1d7b7), color-stop(50%, #cca172), to(#f1c999));
-  background: linear-gradient(to top, #f1d7b7 0%, #cca172 50%, #f1c999 100%);
+html body .filter .jumpWindow.checkEvent .btnBox button:active, html body .filter .jumpWindow.checkEvent .btnBox button.active {
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #f1d7b7), color-stop(50%, #cca172), to(#f1c999));
+  background: linear-gradient(0deg, #f1d7b7 0, #cca172 50%, #f1c999);
 }
 html body .filter .jumpWindow.betWindow {
   display: none;
@@ -5956,18 +5864,18 @@ html body .innerPage .center .dealWrap .bottom .dealBox .reviewWrap .search form
   width: 72px;
   height: 43px;
   margin-right: 8px;
-  font-size: 15px;
-  font-weight: bold;
-  color: #000000;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(40%, #ffffff), to(#f4f4f4));
-  background: linear-gradient(to bottom, #ffffff 40%, #f4f4f4 100%);
-  border: solid 1px #e8e8e8;
+  background: -webkit-gradient(linear, left top, left bottom, from(#f1d7b7), color-stop(50%, #cca172), to(#f1c999));
+  background: linear-gradient(#f1d7b7, #cca172 50%, #f1c999);
+  border: 1px solid #d2a269;
   border-radius: 3px;
-  letter-spacing: 1px;
-}
-html body .innerPage .center .dealWrap .bottom .dealBox .reviewWrap .search form .btnBox button:hover, html body .innerPage .center .dealWrap .bottom .dealBox .reviewWrap .search form .btnBox button:active, html body .innerPage .center .dealWrap .bottom .dealBox .reviewWrap .search form .btnBox button.active {
-  background: #e11515;
   color: #ffffff;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 0 16px;
+}
+html body .innerPage .center .dealWrap .bottom .dealBox .reviewWrap .search form .btnBox button:active, html body .innerPage .center .dealWrap .bottom .dealBox .reviewWrap .search form .btnBox button.active {
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #f1d7b7), color-stop(50%, #cca172), to(#f1c999));
+  background: linear-gradient(0deg, #f1d7b7 0, #cca172 50%, #f1c999);
 }
 html body .innerPage .center .dealWrap .bottom .dealBox .reviewWrap .search form .checkBtn {
   width: auto;
@@ -6169,18 +6077,18 @@ html body .innerPage .center .betWrap form .timeGroup .timeBox .btnBox button {
   width: 72px;
   height: 43px;
   margin-right: 8px;
-  font-size: 15px;
-  font-weight: bold;
-  color: #000000;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(40%, #ffffff), to(#f4f4f4));
-  background: linear-gradient(to bottom, #ffffff 40%, #f4f4f4 100%);
-  border: solid 1px #e8e8e8;
+  background: -webkit-gradient(linear, left top, left bottom, from(#f1d7b7), color-stop(50%, #cca172), to(#f1c999));
+  background: linear-gradient(#f1d7b7, #cca172 50%, #f1c999);
+  border: 1px solid #d2a269;
   border-radius: 3px;
-  letter-spacing: 1px;
-}
-html body .innerPage .center .betWrap form .timeGroup .timeBox .btnBox button:hover, html body .innerPage .center .betWrap form .timeGroup .timeBox .btnBox button:active, html body .innerPage .center .betWrap form .timeGroup .timeBox .btnBox button.active {
-  background: #e11515;
   color: #ffffff;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 0 16px;
+}
+html body .innerPage .center .betWrap form .timeGroup .timeBox .btnBox button:active, html body .innerPage .center .betWrap form .timeGroup .timeBox .btnBox button.active {
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #f1d7b7), color-stop(50%, #cca172), to(#f1c999));
+  background: linear-gradient(0deg, #f1d7b7 0, #cca172 50%, #f1c999);
 }
 html body .innerPage .center .betWrap form .timeGroup .timeBox .btnBox button:last-child {
   margin-right: 15px;
