--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,72 +1,72 @@
 footer {
     width: 100%;
     height: auto;
-    background: $backgroundColor_1;
+    background: $footer_bg;
 
     //上部
-    .top {
-        width: 100%;
-        height: 80px;
+    // .top {
+    //     width: 100%;
+    //     height: 80px;
 
-        .center {
-            width: 1400px;
-            height: 100%;
-            margin: 0 auto;
-            display: flex;
-            justify-content: center;
+    //     .center {
+    //         width: 1400px;
+    //         height: 100%;
+    //         margin: 0 auto;
+    //         display: flex;
+    //         justify-content: center;
 
-            button {
-                width: 25px;
-                height: 100%;
-                position: relative;
-                background: none;
+    //         button {
+    //             width: 25px;
+    //             height: 100%;
+    //             position: relative;
+    //             background: none;
 
-                &::before {
-                    content: "";
-                    position: absolute;
-                    width: 10px;
-                    height: 18px;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%,-50%);
-                }
+    //             &::before {
+    //                 content: "";
+    //                 position: absolute;
+    //                 width: 10px;
+    //                 height: 18px;
+    //                 top: 50%;
+    //                 left: 50%;
+    //                 transform: translate(-50%,-50%);
+    //             }
 
-                &.next {
+    //             &.next {
                     
-                    &::before {
-                        transform: translate(-50%,-50%) scaleX(-1);
-                    }
-                }
-            }
+    //                 &::before {
+    //                     transform: translate(-50%,-50%) scaleX(-1);
+    //                 }
+    //             }
+    //         }
 
-            .partnerBox {
-                width: 100%;
-                height: 100%;
-                overflow: hidden;
+    //         .partnerBox {
+    //             width: 100%;
+    //             height: 100%;
+    //             overflow: hidden;
 
-                .partners {
-                    display: flex;
-                    width: auto;
-                    height: 100%;
-                    align-items: center;
-                    transition: 0.6s ease;
+    //             .partners {
+    //                 display: flex;
+    //                 width: auto;
+    //                 height: 100%;
+    //                 align-items: center;
+    //                 transition: 0.6s ease;
 
-                    i {
-                        width: 170px;
-                        height: 55px;
-                        margin: 0 10px;
-                        opacity: 0.6;
-                    }
-                }
-            }
-        }
-    }
+    //                 i {
+    //                     width: 170px;
+    //                     height: 55px;
+    //                     margin: 0 10px;
+    //                     opacity: 0.6;
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
 
     //下部
     .footerList {
         width: 100%;
         height: auto;
-        background: $backgroundColor_6;
+        background: $footer_bg2;
 
         .center {
             width: 100%;
@@ -75,7 +75,7 @@ footer {
             margin: 0 auto;
             display: flex;
             justify-content: space-around;
-            background: $backgroundColor_5;
+            background: $footer_bg;
 
             ul {
                 width: 1400px;
@@ -86,7 +86,7 @@ footer {
                     margin: 0 52px 0 0;
                     justify-content: center;
                     line-height: 5px;
-                    color: $fontColor_1;
+                    color: $main_Color2;
                     font-weight: bold;
                     cursor: pointer;
                     line-height: 37px;
@@ -108,20 +108,6 @@ footer {
                         opacity: 0.7;
                         margin-bottom: 10px;
                     }
-
-                    button {
-                        width: 202px;
-                        height: 37px;
-                        margin-bottom: 10px;
-                        @include buttonStyle_2;
-
-                        i {
-                            display: inline-block;
-                            width: 20px;
-                            height: 20px;
-                            vertical-align: top;
-                        }
-                    }
                 }
             }
         }
@@ -132,7 +118,7 @@ footer {
                 margin: 20px auto;
                 font-size: 12px;
                 line-height: 1.8;
-                color: $fontColor_5;
+                color: $main_Color3;
                 font-weight: bold;
             }
         }
