--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,7 +1,7 @@
 header {
     width: 100%;
     height: auto;
-    background: $backgroundColor_1;
+    background: $mainBG_1;
     position: relative;
 
     //上部
@@ -14,20 +14,20 @@ header {
         justify-content: space-between;
         
         //左
-        .brad {
-            font-size: 22px;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-            color: $fontColor_1;
+        // .brad {
+        //     font-size: 22px;
+        //     font-weight: bold;
+        //     display: flex;
+        //     align-items: center;
+        //     color: $fontColor_1;
 
-            //時間
-            .time {
-                font-size: 16px;
-                margin-left: 10px;
-                color: $fontColor_1;
-            }
-        }
+        //     //時間
+        //     .time {
+        //         font-size: 16px;
+        //         margin-left: 10px;
+        //         color: $fontColor_1;
+        //     }
+        // }
 
         //右
         .user {
@@ -35,7 +35,7 @@ header {
             height: 100%;
             display: flex;
             align-items: center;
-            color: $fontColor_1;
+            color: $headerTop_Btn;
             font-size: 14px;
 
             &.login {
@@ -56,7 +56,7 @@ header {
                 width: auto;
                 height: 100%;
                 padding: 0 20px;
-                border-right: solid 1px $borderColor_1;
+                border-right: solid 1px $headerTop_Border;
                 align-items: center;
 
                 //未登入選單
@@ -94,20 +94,20 @@ header {
                             width: 152px;
                             height: 30px;
                             margin: 0 10px;
-                            @include inputStyle_1;
+                            @include headerTopInput;
                         }
                     }
 
                     button {
                         width: auto;
                         height: 30px;
-                        @include buttonStyle_1;
+                        @include mainBtn;
                     }
                 }
 
                 //等級
                 .lv {
-                    color: $fontColor_4;
+                    color: $headerTop_Remind;
                     padding-right: 15px;
                 }
 
@@ -136,7 +136,7 @@ header {
                     cursor: pointer;
 
                     &:hover,&:active,&.active {
-                        background: $backgroundColor_2;
+                        background: $headerTop_Hover;
                     }
 
                     .register_ic {
@@ -149,7 +149,7 @@ header {
                 //transfer
                 &.moneyTotal {
                     position: relative;
-                    color: $fontColor_6;
+                    color: $headerTop_Remind;
                     cursor: pointer;
 
                     &::before {
@@ -162,12 +162,12 @@ header {
                         height: 0px;
                         border-style: solid;
                         border-width: 5px 3px 0px 3px;
-                        border-color: $borderColor_6 transparent;
+                        border-color: $headerTop_before transparent;
                     }
 
                     .total {
                         padding-right: 8px;
-                        color: $fontColor_4;
+                        color: $headerTop_Remind;
                     }
 
                     .transferInfo {
@@ -175,8 +175,8 @@ header {
                         width: 290px;
                         height: auto;
                         font-weight: bold;
-                        background: $backgroundColor_10;
-                        border: solid 1px $borderColor_2;
+                        background: $transferInfo_bg;
+                        border: solid 1px $transferInfo_Border;
                         position: absolute;
                         top: 40px;
                         left: 0px;
@@ -190,9 +190,9 @@ header {
                             width: 100%;
                             height: 47px;
                             padding: 11px 16px;
-                            border-bottom: solid 1px $borderColor_4;
+                            border-bottom: solid 1px $transferInfo_Border;
                             box-sizing: border-box;
-                            color: $fontColor_1;
+                            color: $transferInfo_Coler;
 
                             div {
                                 width: 100%;
@@ -252,7 +252,7 @@ header {
                     }
 
                     &:hover,&:active,&.active {
-                        background: $backgroundColor_2;
+                        background: $headerTop_Hover;
                     }
                 }
                 
@@ -274,7 +274,7 @@ header {
     .gameNav {
         width: 100%;
         height: 80px;
-        background: $backgroundColor_3;
+        background: $mainBG_2;
 
         .center {
             width: 1400px;
@@ -298,13 +298,12 @@ header {
                     letter-spacing: 1px;
                     font-weight: bold;
                     cursor: pointer;
-                    color: $fontColor_2;
+                    color: $headerBottom_Color;
                     position: relative;
                     border-bottom: solid 4px transparent;
 
                     &:hover,&:active,&.active {
-                        color: $fontColor_3;
-                        border-color: $borderColor_1;
+                        border-color: $headerBottom_Border;
 
                         &::before {
                             content: "";
@@ -315,7 +314,7 @@ header {
                             left: 50%;
                             border-style: solid;
                             border-width: 0 6px 6px;
-                            border-color: #4a59ed transparent;
+                            border-color: $headerBottom_trianGle transparent;
                             box-sizing: border-box;
                             transform: translateX(-50%);
                         }
@@ -343,8 +342,8 @@ header {
             width: 100%;
             height: 170px;
             box-sizing: border-box;
-            border-top: solid 1px $borderColor_3;
-            background: $backgroundColor_3;
+            border-top: solid 1px $main_Border_2;
+            background: $mainBG_3;
 
             .center {
                 width: 1400px;
@@ -399,7 +398,7 @@ header {
                                 font-size: 14px;
                                 padding-top: 8px;
                                 text-align: center;
-                                color: $fontColor_2;
+                                color: $main_Color;
                                 font-weight: bold;
                                 font-size: 16px;
                             }
