--- a/scss/_innerPage.scss
+++ b/scss/_innerPage.scss
@@ -2579,7 +2579,7 @@
                                         width: 72px;
                                         height: 43px;
                                         margin-right: 8px;
-                                        @include buttonStyle_11;
+                                        @include mainBtn;
                                     }
                                 }
 
@@ -2755,7 +2755,7 @@
                                 width: 72px;
                                 height: 43px;
                                 margin-right: 8px;
-                                @include buttonStyle_11;
+                                @include mainBtn;
 
                                 &:last-child {
                                     margin-right: 15px;
