--- a/scss/_gameWrap.scss
+++ b/scss/_gameWrap.scss
@@ -37,13 +37,13 @@
                 .big {
                     font-size: 58px;
                     letter-spacing: 5px;
-                    color: $fontColor_6;
+                    color: $main_Color4;
                 }
 
                 .small {
                     font-size: 40px;
                     padding-bottom: 5px;
-                    color: $fontColor_6;
+                    color:$main_Color4;
                 }
             }
 
@@ -54,7 +54,7 @@
                 line-height: 24px;
                 font-size: 14px;
                 font-weight: bold;
-                color: $fontColor_2;
+                color:$main_Color;
             }
         }
 
@@ -82,19 +82,19 @@
                             width: 100%;
                             text-align: center;
                             font-size: 14px;
-                            color: $fontColor_2;
+                            color:$main_Color;
                             padding-top: 10px;
                         }
 
                         //for live真人
-                        .imgBox {
-                            border: solid 1px $borderColor_2;
-                            border-radius: 5px;
-                            box-shadow: 0 5px 10px 0 $boxShadow_2;
-                            background: $linear_2;
-                            box-sizing: border-box;
-                            cursor: pointer;
-                        }
+                        // .imgBox {
+                        //     border: solid 1px $borderColor_2;
+                        //     border-radius: 5px;
+                        //     box-shadow: 0 5px 10px 0 $boxShadow_2;
+                        //     background: $linear_2;
+                        //     box-sizing: border-box;
+                        //     cursor: pointer;
+                        // }
                     }
                 }
             }
@@ -125,14 +125,14 @@
         padding: 25px 0;
 
         .slotBody {
-            background: $backgroundColor_3;
+            background: $mainBG_3;
             border-radius: 5px;
             box-shadow: 0 5px 10px $boxShadow_3;
 
             .nav {
                 margin: 0 26px;
                 height: 70px;
-                border-bottom: solid 1px $borderColor_7;
+                border-bottom: solid 1px $main_Border_3;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
@@ -143,7 +143,7 @@
                     display: flex;
 
                     li {
-                        color: $fontColor_5;
+                        color: $main_Color3;
                         width: auto;
                         height: calc(100% - 3px);
                         padding: 0 50px;
@@ -158,8 +158,8 @@
                         margin-top: 3px;
     
                         &:hover,&:active,&.active {
-                            color: $fontColor_6;
-                            border-color: $borderColor_1;
+                            color: $main_Color4;
+                            border-color: $main_Border_4;
 
                             &::before {
                                 content: "";
@@ -171,7 +171,7 @@
                                 bottom: 0;
                                 border-style: solid;
                                 border-width: 0 6px 6px;
-                                border-color: $borderColor_1 transparent;
+                                border-color: $main_Border_4 transparent;
                             }
                         }
                     }
@@ -242,7 +242,7 @@
                             }
 
                             .all {
-                                @include buttonStyle_3;
+                                @include mainBtn;
                                 width: 137px;
                                 height: 40px;
                                 font-size: 18px;
@@ -272,7 +272,7 @@
                             li {
                                 width: 250px;
                                 height: 200px;
-                                border: solid 1px $borderColor_7;
+                                border: solid 1px $gameboder;
                                 border-radius: 5px;
                                 overflow: hidden;
                                 cursor: pointer;
@@ -300,14 +300,14 @@
                                     padding: 0 20px;
                                     box-sizing: border-box;
                                     justify-content: space-between;
-                                    background: $backgroundColor_3;
+                                    background:$gamebg;
                                     position: relative;
                                     z-index: 1;
 
                                     p {
                                         font-size: 18px;
                                         font-weight: bold;
-                                        color: $fontColor_2;
+                                        color: $game_color;
                                     }
 
                                     .love {
@@ -321,7 +321,7 @@
                                     position: absolute;
                                     width: 100%;
                                     height: 165px;
-                                    background: $backgroundColor_7;
+                                    background: $game_hoverBG;
                                     top: 0px;
                                     left: 0px;
                                     display: flex;
@@ -335,10 +335,10 @@
                                     button {
                                         width: 140px;
                                         height: 40px;
-                                        @include buttonStyle_4;
+                                        @include game_btn;
 
                                         &:last-child {
-                                            @include buttonStyle_4_2;
+                                            @include game_Lastbtn;
                                         }
                                     }
                                 }
@@ -368,8 +368,8 @@
             flex-direction: column;
             justify-content: center;
             font-weight: bold;
-            color: $fontColor_2;
-            border-right: solid 1px $borderColor_2;
+            color: $main_Color;
+            border-right: solid 1px $main_Border;
             cursor: pointer;
 
             &:last-child {
