--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -7,7 +7,7 @@ html {
         height: 100%;
         min-width: 1400px;
         min-height: 768px;
-        background:$backgroundColor_3; 
+        background:$mainBG_3; 
 
         @import "./header";
         @import "./ad";
