--- a/scss/_mainWrap.scss
+++ b/scss/_mainWrap.scss
@@ -35,56 +35,56 @@
                     right: 0px;
                     width: 46%;
 
-                    p {
-                        text-align: center;
-                        padding-top: 8px;
-                        font-weight: bold;
+                    // p {
+                    //     text-align: center;
+                    //     padding-top: 8px;
+                    //     font-weight: bold;
 
-                        &.game {
-                            font-size: 42px;
-                            color: $fontColor_3;
-                        }
+                    //     &.game {
+                    //         font-size: 42px;
+                    //         color: $fontColor_3;
+                    //     }
 
-                        &.type {
-                            font-size: 23px;
-                            color: $fontColor_4;
-                        }
-                    }
+                    //     &.type {
+                    //         font-size: 23px;
+                    //         color: $fontColor_4;
+                    //     }
+                    // }
                 }
             }
         }
 
         //下橫條選單
-        .downBar {
-            width: 100%;
-            height: 120px;
-            border-radius: 10px;
-            background: $linear_1;
-            box-shadow: 0px 5px 10px 0px $boxShadow_2;
-            display: flex;
+        // .downBar {
+        //     width: 100%;
+        //     height: 120px;
+        //     border-radius: 10px;
+        //     background: $linear_1;
+        //     box-shadow: 0px 5px 10px 0px $boxShadow_2;
+        //     display: flex;
 
-            li {
-                width: 25%;
-                height: 100%;
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-                justify-content: center;
-                font-weight: bold;
-                color: $fontColor_2;
-                border-right: solid 1px $borderColor_2;
-                cursor: pointer;
+        //     li {
+        //         width: 25%;
+        //         height: 100%;
+        //         display: flex;
+        //         align-items: center;
+        //         flex-direction: column;
+        //         justify-content: center;
+        //         font-weight: bold;
+        //         color: $fontColor_2;
+        //         border-right: solid 1px $borderColor_2;
+        //         cursor: pointer;
 
-                &:last-child {
-                    border: none;
-                }
+        //         &:last-child {
+        //             border: none;
+        //         }
 
-                i {
-                    width: 46px;
-                    height: 46px;
-                    margin-bottom: 14px;
-                }
-            }
-        }
+        //         i {
+        //             width: 46px;
+        //             height: 46px;
+        //             margin-bottom: 14px;
+        //         }
+        //     }
+        // }
     }
 }
