--- a/scss/_event.scss
+++ b/scss/_event.scss
@@ -37,25 +37,9 @@
                 li {
                     width: 100%;
                     height: 60px;
-                    display: flex;
-                    align-items: center;
                     border-bottom: solid 1px $main_Border_2;
-                    position: relative;
-                    cursor: pointer;
-
-                    &:hover,&:active,&.active {
-                        background: $mainBG_4;
-
-                        &::before {
-                            content: "";
-                            position: absolute;
-                            width: 3px;
-                            height: 100%;
-                            left: 0px;
-                            top: 0px;
-                            background: $mainBG_5;
-                        }
-                    }
+                    @include optionStyle_1;
+                    padding: 0;
 
                     i {
                         display: block;
@@ -173,7 +157,7 @@
                 padding: 28px 0 30px;
                 display: flex;
                 flex-direction: column;
-                border-bottom: solid 1px $main_Border_3;
+                border-bottom: solid 1px $main_Border_2;
 
                 span {
                     color:  $main_Color;
