--- a/scss/_help.scss
+++ b/scss/_help.scss
@@ -85,19 +85,8 @@
                         li {
                             width: 100%;
                             height: 45px;
-                            box-sizing: border-box;
-                            padding-left: 72px;
-                            cursor: pointer;
-                            display: flex;
-                            align-items: center;
-                            font-size: 18px;
-                            font-weight: bold;
-                            color: $main_Color3;
-    
-                            &:hover,&:active,&.active {
-                                background: $mainBG_4;
-                                color: $main_Color;
-                            }
+                            @include optionStyle_1;
+                            font-size: 17px;
                         }
                     }
                 }
@@ -147,7 +136,7 @@
                 }
 
                 a {
-                    color:$main_Color5;
+                    color:$remindColor_Main;
                     text-decoration: none;
                     font-weight: bold;
                 }
