--- a/scss/styleGroup/_colorStyle.scss
+++ b/scss/styleGroup/_colorStyle.scss
@@ -2,19 +2,24 @@
 $mainBG_1: #3d4cce;
 $mainBG_2:#ffffff;
 $mainBG_3: #f8f8fa;
-$mainBG_4: #f0f5ff;
-$mainBG_5: #0068ff;
+
 //主要boder
 $main_Border: #4c4c4c;
 $main_Border_2: #dbdef4;
-$main_Border_3: #b3b3b3;
-$main_Border_4: #3d4cce;
+
+//Table用底線
+$specailBorder: #3d4cce;
+//Table
+$table_BG:#ffffff;
+$table_Th_Bg:#ffffff;
+$table_Th_color:#333333;
+$table_Td_Border:#dbdef4;
+
 //主要文字色
 $main_Color:#333333;
 $main_Color2:#ffffff;
 $main_Color3:#666666;
 $main_Color4:#3d4cce;
-$main_Color5:#e11515;
 $main_Color6: #4d4d4d;
 $main_Color7: #4a59ed;
 //主要陰影
@@ -23,7 +28,8 @@ $boxShadow_2: #c0c0c0;
 $boxShadow_3: #00000033;
 
 //remind
-$Remindcolor:#999999;
+$remindColor_Second:#999999;
+$remindColor_Main:#e11515;
 
 //等級
 $level_low:#3d4cce;
@@ -38,12 +44,40 @@ $bAseactive:#05b900;
 //jumpWindow
 $jumpWindow_Fli:#000000a3;
 $jumpWindow_bg:#f8f8fa;
-$jumpWindow_color:#333333;
-$jumpWindow_color2:#ffffff;
-$jumpWindow_color3:#666666;
+$jumpWindow_Titlecolor:#ffffff;
+$jumpWindow_Text:#333333;
+$jumpWindow_Date:#666666;
 $jumpWindow_border:#b3b3b3;
 $jumpWindow_borderActive:#4a59ed;
-$jumpWindow_title:linear-gradient(135deg,#7c4dff,#887aff);
+$jumpWindow_titleBg:linear-gradient(135deg,#7c4dff,#887aff);
+
+//帶before選項+active
+@mixin optionStyle_1 {
+    color: #666666;
+    font-size: 14px;
+    padding-left: 64px;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    position: relative;
+    font-weight: bold;
+    cursor: pointer;
+
+    &:hover,&:active,&.active {
+        background: #f0f5ff;
+        color: #333333;
+
+        &::before {
+            content: "";
+            position: absolute;
+            width: 3px;
+            height: 100%;
+            left: 0px;
+            top: 0px;
+            background: #0068ff;
+        }
+    }
+}
 
 //投注金額按鈕
 @mixin buttonStyle_put {
@@ -158,7 +192,7 @@ $game_hoverBG:#0000006e;
 //lv
 $LV_Bg:#cfb53d;
 $LV_Color:#ffffff;
-//轉存提小按鈕
+//轉存提小圓按鈕
 @mixin inout_Btn {
     background: #e6ebff;
     border: 1px solid #85b5fe;
@@ -177,10 +211,27 @@ $LV_Color:#ffffff;
     }
 }
 
-//金色border&字
+//存款教學
 @mixin smallBtn {
     border: solid 1px #cca172;
     color: #cca172;
+}
+
+//昨天今天本周本月按鈕
+@mixin dateBtn {
+    background: linear-gradient(#fff 40%,#f4f4f4);
+    border: 1px solid #e8e8e8;
+    border-radius: 3px;
+    text-align: center;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    font-weight: bold;
+
+    &:hover,&:active,&.active {
+        background: #0068ff;
+        color: #ffffff;
+    }
 }
 
 //tabs
@@ -197,7 +248,6 @@ $LV_Color:#ffffff;
         background: linear-gradient(135deg,#2e7bff,#734af6);
     }
 }
-
 
 //footer
 $footer_bg:#333333;
