--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -102,6 +102,7 @@ header {
                         width: auto;
                         height: 30px;
                         @include mainBtn;
+                        padding: 0 14px;
                     }
                 }
 
