--- a/scss/_mainWrap.scss
+++ b/scss/_mainWrap.scss
@@ -42,7 +42,7 @@
 
                     //     &.game {
                     //         font-size: 42px;
-                    //         color: $fontColor_3;
+                    //         color: $main_Color7;
                     //     }
 
                     //     &.type {
@@ -71,7 +71,7 @@
         //         flex-direction: column;
         //         justify-content: center;
         //         font-weight: bold;
-        //         color: $fontColor_2;
+        //         color: $main_Color;
         //         border-right: solid 1px $borderColor_2;
         //         cursor: pointer;
 
