--- a/scss/_register.scss
+++ b/scss/_register.scss
@@ -27,7 +27,7 @@
             align-items: center;
             width: 432px;
             padding: 32px 0 37px;
-            background: $backgroundColor_3;
+            background: $mainBG_2;
 
             .title {
                 display: flex;
@@ -56,7 +56,7 @@
                 input {
                     width: 332px;
                     height: 41px;
-                    @include inputStyle_3;
+                    @include inputStyle;
                 }
 
                 .err {
@@ -94,7 +94,7 @@
                 width: 332px;
                 font-size: 12px;
                 font-weight: bold;
-                color: $fontColor_7;
+                color: $remindColor_Main;
                 text-align: left;
             }
 
@@ -115,7 +115,7 @@
                 p {
                     font-size: 16px;
                     font-weight: bold;
-                    color: $fontColor_2;
+                    color: $main_Color;
 
                     span {
                         color: $fontColor_9;
@@ -126,7 +126,7 @@
             .checkBtn {
                 width: 332px;
                 height: 41px;
-                @include buttonStyle_3;
+                @include mainBtn;
             }
         }
     }
